# ChangeLog for dev-util/kdesvn
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/kdesvn/Attic/ChangeLog,v 1.24 2007/04/30 15:54:23 george Exp $

  30 Apr 2007; George Shapovalov <george@gentoo.org> ChangeLog:
  removed old (pre-stable) version

*kdesvn-0.11.2 (30 Apr 2007)

  30 Apr 2007; George Shapovalov <george@gentoo.org> -kdesvn-0.11.0.ebuild,
  +kdesvn-0.11.2.ebuild:
  version bump

  19 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove ka0ttic from metadata.xml due to retirement.

  17 Mar 2007; George Shapovalov <george@gentoo.org> kdesvn-0.11.1.ebuild:
  applied which -> type -P fix to the bumoed version

*kdesvn-0.11.1 (14 Mar 2007)

  14 Mar 2007; George Shapovalov <george@gentoo.org> +kdesvn-0.11.1.ebuild:
  version bump

  14 Mar 2007; George Shapovalov <george@gentoo.org> kdesvn-0.11.0.ebuild:
  which -> type -P fix

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  05 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> kdesvn-0.8.4.ebuild,
  kdesvn-0.9.2.ebuild, kdesvn-0.9.3.ebuild, kdesvn-0.11.0.ebuild:
  Convert to use elog.

  14 Nov 2006; Christian Faulhammer <opfer@gentoo.org> kdesvn-0.9.2.ebuild:
  stable x86, bug #154560

  12 Nov 2006; <malc@gentoo.org> kdesvn-0.11.0.ebuild:
  Fix QA/Multilib-strict issue, bug #154835

  11 Nov 2006; <malc@gentoo.org> kdesvn-0.9.2.ebuild:
  Stable on amd64, bug #154560

*kdesvn-0.11.0 (07 Nov 2006)

  07 Nov 2006; George Shapovalov <george@gentoo.org> +kdesvn-0.11.0.ebuild:
  new version. Upstream transitioned to cmake

  27 Oct 2006; George Shapovalov <george@gentoo.org> kdesvn-0.9.3.ebuild:
  adjusted DEPEND, subversion-1.3 is still Ok. Thanks to Kevin for the note
  (#152929)

  25 Oct 2006; George Shapovalov <george@gentoo.org> kdesvn-0.9.1.ebuild,
  kdesvn-0.9.2.ebuild, kdesvn-0.9.3.ebuild: