@@ -1,5 +1,6 @@
 DIST kdesvn-0.11.1.tar.bz2 1193673 RMD160 0a73573c664e0d0859001eb87fb9eeaa536bbfee SHA1 76a696f258947871dbc395bbeaaf1e8df2978e33 SHA256 43f328403f30c1de617e79ada4e4d8278ff8e6a09bf803ae401ce35749a5f0ff
 DIST kdesvn-0.11.2.tar.bz2 1204456 RMD160 16fb3d059a698fee53e717db593a7428c2593fc9 SHA1 499f7b6e3977198bdbbee2f2416d21eb7e6b4833 SHA256 ff2d25ed5ffec374d7ec26895dc0339e23c15f19e0ca4e216d0982061efd6c83
+DIST kdesvn-0.12.0.tar.bz2 1235802 RMD160 bc80c2efc5353835fb99930a467c98e7b67bdea6 SHA1 b0c488ce905f807d76c057d1f2ea1a997f4ba180 SHA256 146ab3ad613eab4c3e59b717aa0eae746a82ae47b61f1ca7918d5271ddccc4e8
 DIST kdesvn-0.9.2.tar.bz2 1363122 RMD160 a4d731032e7ece51fed13b1ca14115bc78e9735d SHA1 570e0aaace53275e5e8d7a705c587ac819a80ca3 SHA256 be6c052ba151ede8262836613ae892a9b63ae19eb9f824b5808a4b3c8d50131e
 DIST kdesvn-0.9.3.tar.bz2 1366972 RMD160 625968eebbd4c982542b2ecfde26e9c08028d5b1 SHA1 6ba45727cb96bbdedf1fe2e6877d3f9d9057a4b3 SHA256 00b346b6dc3d78cec526c8576c5b2aaa12a1bcc761894ea497ad9607802106e4
 EBUILD kdesvn-0.11.1.ebuild 1377 RMD160 ba1e4f419fc5f7f9822e3529b669c53edf3453c4 SHA1 352e5195e7b5265295574b9c476951ae24672c58 SHA256 bc1c724072c81d319aac96d3216b8ad235813518ef713a0ac363b9964dc58e02
@@ -10,6 +11,10 @@ EBUILD kdesvn-0.11.2.ebuild 1377 RMD160 5a58585a247dfa20cecc0590e3a44747aa2a6e82
 MD5 c3a0231d722f7d862bffb027a4a93235 kdesvn-0.11.2.ebuild 1377
 RMD160 5a58585a247dfa20cecc0590e3a44747aa2a6e82 kdesvn-0.11.2.ebuild 1377
 SHA256 8fd7f068d98eff89a1e5ba8f4e9babfe53d3aefab4b958611eda0caa23275be8 kdesvn-0.11.2.ebuild 1377
+EBUILD kdesvn-0.12.0.ebuild 1378 RMD160 ea71dabb47a41459e7f82291463d7e4668d02ed2 SHA1 f95fe07a7b0d357eb06451a058b5d89a2a787476 SHA256 6bab9fc1031d66e150c33019f5d2fc8d25eac4f0fd705aed09495b949735b5e8
+MD5 3d2bf481487e4d205dfc0105e965c642 kdesvn-0.12.0.ebuild 1378
+RMD160 ea71dabb47a41459e7f82291463d7e4668d02ed2 kdesvn-0.12.0.ebuild 1378
+SHA256 6bab9fc1031d66e150c33019f5d2fc8d25eac4f0fd705aed09495b949735b5e8 kdesvn-0.12.0.ebuild 1378
 EBUILD kdesvn-0.9.2.ebuild 695 RMD160 d9c14b93f8e020881edb32c16aba8451c727a85f SHA1 ea56ca5ebb09596403dcaaa67487a92e4330d14c SHA256 734dbc9e29d7547b11c5ef2280c8bffb528b1532de2fa38a985c97fc6a0eb204
 MD5 8af38a0b1434b587a7e122cc03afa225 kdesvn-0.9.2.ebuild 695
 RMD160 d9c14b93f8e020881edb32c16aba8451c727a85f kdesvn-0.9.2.ebuild 695
@@ -18,10 +23,10 @@ EBUILD kdesvn-0.9.3.ebuild 697 RMD160 1667014915d88db204e898536cafc59e80192228 S
 MD5 7333e0e3e42895e877c3f4f41a8d009e kdesvn-0.9.3.ebuild 697
 RMD160 1667014915d88db204e898536cafc59e80192228 kdesvn-0.9.3.ebuild 697
 SHA256 1c8587caf2ea1b9333e03f261c656723961b971f200efd1d92fc7c13c402f2c4 kdesvn-0.9.3.ebuild 697
-MISC ChangeLog 3707 RMD160 5f7d24c35e3eb5f284206a4d1acd14371c644d34 SHA1 b045d52215149adea2f10dde848642e641e9c978 SHA256 a05cdafd0eae4d4bed9f34d44c694f6e6462e06472a119fda7d5e52bfb881d88
-MD5 faeb514b0d86ebcc5e2117f1dd256b16 ChangeLog 3707
-RMD160 5f7d24c35e3eb5f284206a4d1acd14371c644d34 ChangeLog 3707
-SHA256 a05cdafd0eae4d4bed9f34d44c694f6e6462e06472a119fda7d5e52bfb881d88 ChangeLog 3707
+MISC ChangeLog 3889 RMD160 ce68c61b075a8014bfc403ef7d3fc9706fc1b103 SHA1 90e0c34df173f95a42462afd0d722ea38b501a51 SHA256 4ab7198402c41c7a09cb9f7a886fb3ed61dd89caaeaff9fcfb3eb409573c8c4a
+MD5 1f57daa6a753697627c0789edacc134d ChangeLog 3889
+RMD160 ce68c61b075a8014bfc403ef7d3fc9706fc1b103 ChangeLog 3889
+SHA256 4ab7198402c41c7a09cb9f7a886fb3ed61dd89caaeaff9fcfb3eb409573c8c4a ChangeLog 3889
 MISC metadata.xml 260 RMD160 cc17d54209f19901d99ae48eb2f90e5fce1cc73d SHA1 ea54b5efc7844e62b8e956f031fa7514bc70037a SHA256 c3afdca26aec5ef6f9eca89709b3338438757517ce4246e205d292e875dbba7c
 MD5 497715c8297789c2c36e27a017cb5320 metadata.xml 260
 RMD160 cc17d54209f19901d99ae48eb2f90e5fce1cc73d metadata.xml 260
@@ -32,6 +37,9 @@ SHA256 2d218a7a2182e9d81d858d017b87f5442ab0fd7f377a7c46b9219f3916ec2e4b files/di
 MD5 c1a4d45fe13c62604c6eab7c8d633b67 files/digest-kdesvn-0.11.2 247
 RMD160 5f814c9dae5f1543eef6f479f03c205798f7484d files/digest-kdesvn-0.11.2 247
 SHA256 7addf9a1d5e670603f1ccdc68f29f440fa2777a76e7a9940ecb7e7a6837a654a files/digest-kdesvn-0.11.2 247
+MD5 a1d9a30767ee153970ad74a3a6ba4eba files/digest-kdesvn-0.12.0 247
+RMD160 9f734e06dadf6c4ef13b4f510ee16745aabf6d11 files/digest-kdesvn-0.12.0 247
+SHA256 18b9583eabbff854f09ca75a949b703e43ba3af6f8e40ae7a6f934d1b6d02cfc files/digest-kdesvn-0.12.0 247
 MD5 80b685e0b85d73c15f1c2d7ba1f93423 files/digest-kdesvn-0.9.2 244
 RMD160 12ab2a6be7ab3dacb86758e799f098b38b0cd0dc files/digest-kdesvn-0.9.2 244
 SHA256 fe7d8eb895961fecdc42443a14d24a84b3ba1f67010a12ad411c0f9160ef0022 files/digest-kdesvn-0.9.2 244
