@@ -1,0 +1,3 @@
+MD5 ed04b5e3319c2a2cf4074ca3dad388da kdesvn-0.12.0.tar.bz2 1235802
+RMD160 bc80c2efc5353835fb99930a467c98e7b67bdea6 kdesvn-0.12.0.tar.bz2 1235802
+SHA256 146ab3ad613eab4c3e59b717aa0eae746a82ae47b61f1ca7918d5271ddccc4e8 kdesvn-0.12.0.tar.bz2 1235802
