@@ -1,0 +1,53 @@
+# Copyright 1999-2007 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/kdesvn/Attic/kdesvn-0.12.0.ebuild,v 1.1 2007/05/23 18:26:43 genstef Exp $
+
+inherit eutils kde-functions toolchain-funcs
+
+DESCRIPTION="KDESvn is a frontend to the subversion vcs."
+HOMEPAGE="http://www.alwins-world.de/wiki/programs/kdesvn"
+SRC_URI="http://www.alwins-world.de/programs/download/${PN}/${P}.tar.bz2"
+
+SLOT="0"
+LICENSE="GPL-2"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
+
+DEPEND=">=dev-util/subversion-1.3
+		net-misc/neon
+		>=dev-util/cmake-2.4"
+
+need-kde 3.3
+
+src_unpack() {
+	unpack ${A}
+	cd "${S}"
+
+	sed -i -e 's:LINK_FLAGS "${APR_EXTRA_LIBFLAGS} ${APU_EXTRA_LIBFLAGS} ${LINK_NO_UNDEFINED} ${_BASE_LDADD}"):LINK_FLAGS "${_BASE_LDADD} ${APR_EXTRA_LIBFLAGS} ${APU_EXTRA_LIBFLAGS} ${LINK_NO_UNDEFINED}"):' \
+		src/CMakeLists.txt
+}
+
+src_compile() {
+	cmake \
+		-DCMAKE_INSTALL_PREFIX=/usr					\
+		-DCMAKE_BUILD_TYPE=Release					\
+		-DCMAKE_C_COMPILER=$(type -P $(tc-getCC))		\
+		-DCMAKE_CXX_COMPILER=$(type -P $(tc-getCXX))	\
+		-DCMAKE_CXX_FLAGS="-DQT_THREAD_SUPPORT"		\
+		-DLIB_INSTALL_DIR=/usr/$(get_libdir) 		\
+		|| die
+
+	emake || die
+}
+
+src_install() {
+	emake DESTDIR="${D}" install || die
+}
+
+pkg_postinst() {
+	if ! has_version 'kde-base/kompare'; then
+		echo
+		elog "For nice graphical diffs, install kde-base/kompare."
+		echo
+	fi
+}
